--- a/Covid-19App/Storyboards/HomeTab.storyboard
+++ b/Covid-19App/Storyboards/HomeTab.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Qf-0M-Uhz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="J75-Lh-Mzj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -144,29 +144,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mol-Xp-NcT"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Home" id="vfq-2D-x8b"/>
+                    <connections>
+                        <outlet property="gConfirmed" destination="08C-0I-dfj" id="JBQ-88-uCY"/>
+                        <outlet property="gCritical" destination="J4w-Eq-XBS" id="pUu-ah-hfj"/>
+                        <outlet property="gDeaths" destination="eji-GY-ltk" id="YrN-B7-vpa"/>
+                        <outlet property="gRecoverd" destination="7Qm-D5-MEM" id="F2d-Fw-hZX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tc1-qa-hpl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="650.72463768115949" y="-166.07142857142856"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="0tp-DE-xfF">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1Qf-0M-Uhz" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Kpt-Aq-SPn">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="J75-Lh-Mzj" kind="relationship" relationship="rootViewController" id="Jhi-tb-eDl"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ron-yM-CPw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-259.4202898550725" y="-166.07142857142856"/>
+            <point key="canvasLocation" x="-255.07246376811597" y="18.75"/>
         </scene>
     </scenes>
 </document>
